code/dotnet/AxiomaEquityOptimizer/v1/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Axioma Equity Optimizer client library for .NET

[![API Version](https://img.shields.io/badge/api-v1-blue)]()
[![Nuget](https://img.shields.io/nuget/v/FactSet.SDK.AxiomaEquityOptimizer)](https://www.nuget.org/packages/FactSet.SDK.AxiomaEquityOptimizer)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to fetch Engines Analytics through APIs.

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1
- SDK version: 0.8.12
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.AxiomaEquityOptimizer -v 0.8.12
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.AxiomaEquityOptimizer -Version 0.8.12
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.AxiomaEquityOptimizer.Api;
using FactSet.SDK.AxiomaEquityOptimizer.Client;
using FactSet.SDK.AxiomaEquityOptimizer.Model;

namespace Example
{
    public static class CancelAxiomaOptimizationByIdExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.AxiomaEquityOptimizer.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            //
            // The confidential client instance should be reused in production environments.
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new OptimizationsApi(config);
            var id = "id_example";  // string | from url, provided from the location header in the Run Optimization endpoint

            try
            {
                // Cancel Axioma optimization by id
                apiInstance.CancelAxiomaOptimizationById(id);
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling OptimizationsApi.CancelAxiomaOptimizationById: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *http://localhost*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*OptimizationsApi* | [**CancelAxiomaOptimizationById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v1/docs/OptimizationsApi.md#cancelaxiomaoptimizationbyid) | **DELETE** /analytics/engines/axp/v1/optimizations/{id} | Cancel Axioma optimization by id
*OptimizationsApi* | [**GetAxiomaOptimizationById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v1/docs/OptimizationsApi.md#getaxiomaoptimizationbyid) | **GET** /analytics/engines/axp/v1/optimizations/{id} | Get Axioma optimization by id
*OptimizationsApi* | [**RunAxiomaOptimization**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v1/docs/OptimizationsApi.md#runaxiomaoptimization) | **POST** /analytics/engines/axp/v1/optimizations | Run Axioma optimization
*StrategyDocumentsApi* | [**GetAxiomaEquityStrategyDocuments**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v1/docs/StrategyDocumentsApi.md#getaxiomaequitystrategydocuments) | **GET** /analytics/engines/axp/v1/strategies/{path} | Get Axioma Equity strategy documents and sub-directories in a directory


## Documentation for Models

 - [Model.AxiomaEquityOptimizationParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v1/docs/AxiomaEquityOptimizationParameters.md)
 - [Model.DocumentDirectories](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v1/docs/DocumentDirectories.md)
 - [Model.OptimalPortfolio](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v1/docs/OptimalPortfolio.md)
 - [Model.Optimization](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v1/docs/Optimization.md)
 - [Model.OptimizerAccount](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v1/docs/OptimizerAccount.md)
 - [Model.OptimizerAccountOverrides](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v1/docs/OptimizerAccountOverrides.md)
 - [Model.OptimizerOptimalHoldings](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v1/docs/OptimizerOptimalHoldings.md)
 - [Model.OptimizerOutputTypes](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v1/docs/OptimizerOutputTypes.md)
 - [Model.OptimizerStrategy](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v1/docs/OptimizerStrategy.md)
 - [Model.OptimizerStrategyOverrides](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v1/docs/OptimizerStrategyOverrides.md)
 - [Model.OptimizerTradesList](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v1/docs/OptimizerTradesList.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
