code/dotnet/AxiomaEquityOptimizer/v3/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Axioma Equity Optimizer client library for .NET

[![API Version](https://img.shields.io/badge/api-v3-blue)]()
[![Nuget](https://img.shields.io/nuget/v/FactSet.SDK.AxiomaEquityOptimizer)](https://www.nuget.org/packages/FactSet.SDK.AxiomaEquityOptimizer)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Allow clients to fetch Analytics through APIs.

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 3
- SDK version: 0.21.10
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.AxiomaEquityOptimizer -v 0.21.10
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.AxiomaEquityOptimizer -Version 0.21.10
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.AxiomaEquityOptimizer.Api;
using FactSet.SDK.AxiomaEquityOptimizer.Client;
using FactSet.SDK.AxiomaEquityOptimizer.Model;

namespace Example
{
    public static class CancelOptimizationByIdExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.AxiomaEquityOptimizer.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            //
            // The confidential client instance should be reused in production environments.
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new AXPOptimizerApi(config);
            var id = "id_example";  // string | from url, provided from the location header in the Create and Run Axioma optimization endpoint

            try
            {
                // Cancel Axioma optimization by id
                apiInstance.CancelOptimizationById(id);
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling AXPOptimizerApi.CancelOptimizationById: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AXPOptimizerApi* | [**CancelOptimizationById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v3/docs/AXPOptimizerApi.md#canceloptimizationbyid) | **DELETE** /analytics/engines/axp/v3/optimizations/{id} | Cancel Axioma optimization by id
*AXPOptimizerApi* | [**GetOptimizationParameters**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v3/docs/AXPOptimizerApi.md#getoptimizationparameters) | **GET** /analytics/engines/axp/v3/optimizations/{id} | Get Axioma optimization parameters by id
*AXPOptimizerApi* | [**GetOptimizationResult**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v3/docs/AXPOptimizerApi.md#getoptimizationresult) | **GET** /analytics/engines/axp/v3/optimizations/{id}/result | Get Axioma optimization result by id
*AXPOptimizerApi* | [**GetOptimizationStatusById**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v3/docs/AXPOptimizerApi.md#getoptimizationstatusbyid) | **GET** /analytics/engines/axp/v3/optimizations/{id}/status | Get Axioma optimization status by id
*AXPOptimizerApi* | [**PostAndOptimize**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v3/docs/AXPOptimizerApi.md#postandoptimize) | **POST** /analytics/engines/axp/v3/optimizations | Create and Run Axioma optimization
*AXPOptimizerApi* | [**PutAndOptimize**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v3/docs/AXPOptimizerApi.md#putandoptimize) | **PUT** /analytics/engines/axp/v3/optimizations/{id} | Create or Update Axioma optimization and run it.
*AccountsApi* | [**GetAccounts**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v3/docs/AccountsApi.md#getaccounts) | **GET** /analytics/lookups/v3/accounts/{path} | Get accounts and sub-directories in a directory
*CurrenciesApi* | [**GetCurrencies**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v3/docs/CurrenciesApi.md#getcurrencies) | **GET** /analytics/lookups/v3/currencies | Get currencies
*StrategyDocumentsApi* | [**GetAxiomaEquityStrategyDocuments**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v3/docs/StrategyDocumentsApi.md#getaxiomaequitystrategydocuments) | **GET** /analytics/engines/axp/v3/strategies/{path} | Get Axioma Equity strategy documents and sub-directories in a directory


## Documentation for Models

 - [Model.AccountDirectories](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v3/docs/AccountDirectories.md)
 - [Model.AccountDirectoriesRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v3/docs/AccountDirectoriesRoot.md)
 - [Model.AxiomaEquityOptimizationParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v3/docs/AxiomaEquityOptimizationParameters.md)
 - [Model.AxiomaEquityOptimizationParametersRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v3/docs/AxiomaEquityOptimizationParametersRoot.md)
 - [Model.CalculationInfo](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v3/docs/CalculationInfo.md)
 - [Model.CalculationInfoRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v3/docs/CalculationInfoRoot.md)
 - [Model.ClientErrorResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v3/docs/ClientErrorResponse.md)
 - [Model.Currency](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v3/docs/Currency.md)
 - [Model.CurrencyRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v3/docs/CurrencyRoot.md)
 - [Model.DocumentDirectories](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v3/docs/DocumentDirectories.md)
 - [Model.DocumentDirectoriesRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v3/docs/DocumentDirectoriesRoot.md)
 - [Model.Error](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v3/docs/Error.md)
 - [Model.ErrorSource](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v3/docs/ErrorSource.md)
 - [Model.ObjectRoot](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v3/docs/ObjectRoot.md)
 - [Model.OptimalPortfolio](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v3/docs/OptimalPortfolio.md)
 - [Model.Optimization](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v3/docs/Optimization.md)
 - [Model.OptimizerAccount](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v3/docs/OptimizerAccount.md)
 - [Model.OptimizerAccountOverrides](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v3/docs/OptimizerAccountOverrides.md)
 - [Model.OptimizerOptimalHoldings](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v3/docs/OptimizerOptimalHoldings.md)
 - [Model.OptimizerOutputTypes](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v3/docs/OptimizerOutputTypes.md)
 - [Model.OptimizerStrategy](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v3/docs/OptimizerStrategy.md)
 - [Model.OptimizerStrategyOverrides](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v3/docs/OptimizerStrategyOverrides.md)
 - [Model.OptimizerTradesList](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/AxiomaEquityOptimizer/v3/docs/OptimizerTradesList.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
